[tool.poetry]
name = "test_python"
version = "0.1.0"
description = ""
authors = ["golden <120225883@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = {extras = ["redis"], version = "^5.1.0"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
